--- a/posts/post-with-code/colpali/2024-09-23-generate_colpali_dataset.ipynb
+++ b/posts/post-with-code/colpali/2024-09-23-generate_colpali_dataset.ipynb
@@ -252,41 +252,27 @@
    "source": [
     "## Creating queries from documents \n",
     "\n",
-    "For the data using in ColPali, part of the dataset was sourced from existing document question answering datasets. Another component was generated using Claude 3.0 Sonnet with the following prompt:\n",
+    "For the data using in ColPali, part of the dataset was sourced from existing document question answering datasets. Another component was generated using Claude 3.0 Sonnet with the following prompt:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = \"\"\"\n",
+    "You are an assistant specialized in Multimodal RAG tasks.\n",
     "\n",
-    "```\n",
-    "You are an assistant specialized in\n",
-    "→ Multimodal RAG tasks.\\n\n",
-    "The task is the following: given an image\n",
-    "→ from a pdf page, you will have to\n",
-    "generate questions that can be asked by a\n",
-    "→ user to retrieve information from\n",
-    "a large documentary corpus.\n",
-    "The question should be relevant to the\n",
-    "→ page, and should not be too specific\n",
-    "or too general. The question should be\n",
-    "→ about the subject of the page, and\n",
-    "the answer needs to be found in the page.\n",
-    "→ \\n\n",
+    "The task is the following: given an image from a pdf page, you will have to generate questions that can be asked by a user to retrieve information from a large documentary corpus.\n",
     "\n",
-    "Remember that the question is asked by a\n",
-    "→ user to get some information from a\n",
-    "large documentary corpus that contains\n",
-    "→ multimodal data. Generate a question\n",
-    "that could be asked by a user without\n",
-    "→ knowing the existence and the content\n",
-    "of the corpus. \\n\n",
-    "Generate as well the answer to the\n",
-    "→ question, which should be found in the\n",
-    "page. And the format of the answer should\n",
-    "→ be a list of words answering the\n",
-    "question. \\n\n",
+    "The question should be relevant to the page, and should not be too specific or too general. The question should be about the subject of the page, and the answer needs to be found in the page.\n",
     "\n",
-    "Generate at most THREE pairs of questions\n",
-    "→ and answers per page in a\n",
-    "dictionary with the following format,\n",
-    "→ answer ONLY this dictionary\n",
-    "NOTHING ELSE: \\n\n",
+    "Remember that the question is asked by a user to get some information from a large documentary corpus that contains multimodal data. Generate a question that could be asked by a user without knowing the existence and the content of the corpus.\n",
+    "\n",
+    "Generate as well the answer to the question, which should be found in the page. And the format of the answer should be a list of words answering the question.\n",
+    "\n",
+    "Generate at most THREE pairs of questions and answers per page in a dictionary with the following format, answer ONLY this dictionary NOTHING ELSE:\n",
     "\n",
     "{\n",
     "    \"questions\": [\n",
@@ -301,20 +287,20 @@
     "        {\n",
     "            \"question\": \"XXXXXX\",\n",
     "            \"answer\": [\"YYYYYY\"]\n",
-    "        },\n",
+    "        }\n",
     "    ]\n",
     "}\n",
-    "where XXXXXX is the question and\n",
-    "→ ['YYYYYY'] is the corresponding list\n",
-    "→ of answers\n",
-    "that could be as long as needed. \\n\n",
+    "where XXXXXX is the question and ['YYYYYY'] is the corresponding list of answers that could be as long as needed.\n",
     "\n",
-    "Note: If there are no questions to ask\n",
-    "→ about the page, return an empty list.\n",
-    "Focus on making relevant questions\n",
-    "→ concerning the page. \\n\n",
-    "Here is the page: \\n\n",
-    "```\n",
+    "Note: If there are no questions to ask about the page, return an empty list. Focus on making relevant questions concerning the page.\n",
+    "\n",
+    "Here is the page:\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "As you can see this prompt is focused on generating questions that are relevant to the page and that could be asked by a user and answered by the document. One thing I noticed from the queries generated with this prompt is that I think some of the generated queries strayed a bit from the prompts request to not assume the user knew the content of the document. Some of the questions were quite specific and it seemed like they were tailored to the particular page they were generated from. \n",
     "\n",
