--- a/posts/post-with-code/colpali/2024-09-23-generate_colpali_dataset.ipynb
+++ b/posts/post-with-code/colpali/2024-09-23-generate_colpali_dataset.ipynb
@@ -702,14 +702,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "id": "EuxCNpJPkeET"
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "prompt = \"\"\"You are an assistant specialized in Multimodal RAG tasks.\n",
+    "```python\n",
+    "prompt = \"\"\"\n",
+    "You are an assistant specialized in Multimodal RAG tasks.\n",
     "\n",
     "The task is the following: given an image from a pdf page, you will have to generate questions that can be asked by a user to retrieve information from a large documentary corpus.\n",
     "\n",
@@ -743,7 +741,8 @@
     "Note: If there are no questions to ask about the page, return an empty list. Focus on making relevant questions concerning the page.\n",
     "\n",
     "Here is the page:\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "```"
    ]
   },
   {
