--- a/posts/post-with-code/colpali/2024-09-23-generate_colpali_dataset.ipynb
+++ b/posts/post-with-code/colpali/2024-09-23-generate_colpali_dataset.ipynb
@@ -242,8 +242,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{.tip}\n",
-    "One thing you might notice about these queries is that many of them are more focused on \"questions\" about documents rather than traditional search queries. We'll shortly see the prompting approach used to generate these queries but we might already want to consider, depending on our use case, whether we want to generate more \"search\"-like queries or more \"question\"-like queries."
+    "::: {.callout-tip}\n",
+    "One thing you might notice about these queries is that many of them are more focused on \"questions\" about documents rather than traditional search queries. We'll shortly see the prompting approach used to generate these queries but we might already want to consider, depending on our use case, whether we want to generate more \"search\"-like queries or more \"question\"-like queries.\n",
+    ":::"
    ]
   },
   {
