--- a/posts/post-with-code/colpali/2024-09-23-generate_colpali_dataset.ipynb
+++ b/posts/post-with-code/colpali/2024-09-23-generate_colpali_dataset.ipynb
@@ -536,7 +536,7 @@
    "outputs": [],
    "source": [
     "# default processer\n",
-    "processor = AutoProcessor.from_pretrained(\"Qwen/Qwen2-VL-7B-Instruct\")\n"
+    "processor = AutoProcessor.from_pretrained(\"Qwen/Qwen2-VL-7B-Instruct\")"
    ]
   },
   {
@@ -970,13 +970,14 @@
     "from pydantic import BaseModel\n",
     "from typing import Tuple\n",
     "\n",
+    "\n",
     "class GeneralRetrievalQuery(BaseModel):\n",
     "    broad_topical_query: str\n",
     "    broad_topical_explanation: str\n",
     "    specific_detail_query: str\n",
     "    specific_detail_explanation: str\n",
     "    visual_element_query: str\n",
-    "    visual_element_explanation: str\n"
+    "    visual_element_explanation: str"
    ]
   },
   {
@@ -1043,7 +1044,6 @@
     }
    ],
    "source": [
-    "\n",
     "def get_retrieval_prompt(prompt_name: str) -> Tuple[str, GeneralRetrievalQuery]:\n",
     "    if prompt_name != \"general\":\n",
     "        raise ValueError(\"Only 'general' prompt is available in this version\")\n",
@@ -1271,6 +1271,7 @@
    ],
    "source": [
     "from tqdm.auto import tqdm\n",
+    "\n",
     "responses = []\n",
     "for row in tqdm(sample):\n",
     "    try:\n",
