--- a/posts/2024/11/local-vision-language-model-lm-studio.ipynb
+++ b/posts/2024/11/local-vision-language-model-lm-studio.ipynb
@@ -1807,6 +1807,19 @@
     "\n",
     "The recent release of [Aria](https://huggingface.co/rhymes-ai/Aria) has me very excited about open VLMs. At the moment it's quite a beefy model and is unlikely to run on my mac machine but there has been a lot of progress in quantizing models and other tricks to make running these models much more accessible. For text models we now have a lot of smallish models (~8B parameters) that are pretty capable for many tasks and run very quickly even locally. It's quite likely that we'll soon see a lot more open VLMs that are actually accessible to run on consumer hardware. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Resources\n",
+    "\n",
+    "- [LM Studio](https://lmstudio.ai/)\n",
+    "- [Pixtral](https://huggingface.co/mistral-community/pixtral-12b)\n",
+    "- [MLX](https://github.com/ml-explore/mlx)\n",
+    "- [mlx-vlm](https://github.com/lmstudio-ai/mlx-vlm)\n",
+    "- [Aria](https://huggingface.co/rhymes-ai/Aria)"
+   ]
   }
  ],
  "metadata": {
