--- a/posts/2024/11/local-vision-language-model-lm-studio.ipynb
+++ b/posts/2024/11/local-vision-language-model-lm-studio.ipynb
@@ -185,7 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see we have a bunch of commands for interacting with the local LLM service. We'll srart by downloading a VLM model. For now LM Studio has support for [Pixtral](https://huggingface.co/mistral-community/pixtral-12b) (specifcally using a MLX 4 bit quantised model [mlx-community/pixtral-12b-4bit](https://huggingface.co/mlx-community/pixtral-12b-4bit)). \n",
+    "As you can see we have a bunch of commands for interacting with the local LLM service. We'll start by downloading a VLM model. For now LM Studio has support for [Pixtral](https://huggingface.co/mistral-community/pixtral-12b) (specifcally using a MLX 4 bit quantised model [mlx-community/pixtral-12b-4bit](https://huggingface.co/mlx-community/pixtral-12b-4bit)). \n",
     "\n",
     "LM studio allows us to directly download models from Hugging Face. Let's download the Pixtral model!"
    ]
