--- a/posts/post-with-code/colpali/2024-09-23-generate_colpali_dataset.ipynb
+++ b/posts/post-with-code/colpali/2024-09-23-generate_colpali_dataset.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "---\n",
     "title: \"Generating a dataset of queries for training and fine-tuning ColPali models on a UFO dataset\"\n",
-    "description: \"Using an open VLM to generate queries for a multimodal retrieval model\"\n",
+    "description: \"Learn how to generate custom ColPali dataset using an open VLM for multimodal retrieval model training and fine-tuning.\"\n",
     "author: \"Daniel van Strien\"\n",
     "date: \"2024-09-23\"\n",
     "image: cJkPlaOVIju5yR7TaO0fD.png\n",
@@ -20,6 +20,15 @@
    "metadata": {},
    "source": [
     "[![](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/davanstrien/blog/blob/main/posts/post-with-code/colpali/2024-09-23-generate_colpali_dataset.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**updates**\n",
+    "\n",
+    "- You can find a follow up blog post on [using ColPali with Qdrant](https://danielvanstrien.xyz/posts/post-with-code/colpali-qdrant/2024-10-02_using_colpali_with_qdrant.html) which covers how to use the fine-tuned ColPali model with the Qdrant vector database to implement a multimodal retrieval pipeline."
    ]
   },
   {
