--- a/posts/2025/FineWeb-c/scandi_fineweb_c_problematic.ipynb
+++ b/posts/2025/FineWeb-c/scandi_fineweb_c_problematic.ipynb
@@ -9,7 +9,7 @@
     "description: \"Building and evaluating efficient, disposable content filtering models for Scandinavian language texts using the FineWeb-c dataset to improve data quality\"\n",
     "author: \"Daniel van Strien\"\n",
     "date: \"2025-01-13\"\n",
-    "categories: [\"polars\", \"huggingface\", \"fineweb\", \"data\"]\n",
+    "categories: [\"polars\", \"huggingface\", \"fineweb\", \"datasets\"]\n",
     "image: https://huggingface.co/datasets/HuggingFaceFW/admin/resolve/main/fineweb-2-logo.png\n",
     "toc-depth: 3\n",
     "toc: true\n",
