--- a/posts/2025/FineWeb-c/scandinavian-content-filtering-fineweb.ipynb
+++ b/posts/2025/FineWeb-c/scandinavian-content-filtering-fineweb.ipynb
@@ -10,7 +10,7 @@
                 "author: \"Daniel van Strien\"\n",
                 "date: \"2025-01-09\"\n",
                 "categories: [\"polars\", \"huggingface\", \"fineweb\", \"data\"]\n",
-                "image: https://huggingface.co/datasets/HuggingFaceFW/admin/resolve/main/fineweb-2-logo.png\n",
+                "image: https://raw.githubusercontent.com/davanstrien/blog/refs/heads/main/posts/2025/FineWeb-c/assets/illustration.jpg \n",
                 "toc-depth: 3\n",
                 "toc: true\n",
                 "---"
