--- a/posts/2025/FineWeb-c/scandinavian-content-filtering-fineweb.ipynb
+++ b/posts/2025/FineWeb-c/scandinavian-content-filtering-fineweb.ipynb
@@ -12,12 +12,12 @@
                 "categories: [\"polars\", \"huggingface\", \"fineweb\", \"datasets\"]\n",
                 "image: https://raw.githubusercontent.com/davanstrien/blog/refs/heads/main/posts/2025/FineWeb-c/assets/illustration.jpg \n",
                 "twitter-card:\n",
-                "  title: \"Hygge Data - Cozy Content Filtering\"\n",
+                "  title: \"Hygge Data - Cleaning Web Scale Data using small classifiers\"\n",
                 "  description: \"Training lightweight, disposable web scale data curation models for Scandinavian language texts using the FineWeb-c dataset\"\n",
                 "  image: https://raw.githubusercontent.com/davanstrien/blog/refs/heads/main/posts/2025/FineWeb-c/assets/illustration.jpg\n",
                 "  card-style: summary_large_image\n",
                 "open-graph:\n",
-                "  title: \"Hygge Data - Cozy Content Filtering\"\n",
+                "  title: \"Hygge Data - Cleaning Web Scale Data using small classifiers\"\n",
                 "  description: \"Training lightweight, disposable web scale data curation models for Scandinavian language texts using the FineWeb-c dataset\"\n",
                 "  image: https://raw.githubusercontent.com/davanstrien/blog/refs/heads/main/posts/2025/FineWeb-c/assets/illustration.jpg\n",
                 "toc-depth: 3\n",
