--- a/posts/2025/FineWeb-c/scandinavian-content-filtering-fineweb.ipynb
+++ b/posts/2025/FineWeb-c/scandinavian-content-filtering-fineweb.ipynb
@@ -11,7 +11,7 @@
                 "date: \"2025-01-09\"\n",
                 "categories: [\"polars\", \"huggingface\", \"fineweb\", \"datasets\"]\n",
                 "image: https://raw.githubusercontent.com/davanstrien/blog/refs/heads/main/posts/2025/FineWeb-c/assets/illustration.jpg \n",
-                "twitter-card:\n",
+                "twitter-card`:\n",
                 "  title: \"Hygge Data - Cleaning Web Scale Data using small classifiers\"\n",
                 "  description: \"Training lightweight, disposable web scale data curation models for Scandinavian language texts using the FineWeb-c dataset\"\n",
                 "  image: https://raw.githubusercontent.com/davanstrien/blog/refs/heads/main/posts/2025/FineWeb-c/assets/illustration.jpg\n",
@@ -1627,7 +1627,8 @@
             },
             "outputs": [],
             "source": [
-                "#| code-fold: truedef train_model(\n",
+                "#| code-fold: true\n",
+                "def train_model(\n",
                 "    train_ds,\n",
                 "    test_ds,\n",
                 "    hub_model_id,\n",
