--- a/posts/2025/deepseek/distil-deepseek-modernbert.ipynb
+++ b/posts/2025/deepseek/distil-deepseek-modernbert.ipynb
@@ -1693,7 +1693,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "While this is for sure a vibes based asssesement it does seem like the model does better when it has room to think so we'll proceed with this approach. "
+    "While this is definitely a vibes-based assessment, it does seem like the model does better when it has room to think, so we'll proceed with this approach. "
    ]
   },
   {
@@ -1701,8 +1701,8 @@
    "metadata": {},
    "source": [
     "::: {.callout-note}\n",
-    "There are ways to allow for both strucutred generation and reasoning. I'll post more on that in the future!\n",
-    ":::\n"
+    "There are ways to allow for both structured generation and reasoning. I'll post more on that in the future!\n",
+    ":::"
    ]
   },
   {
