--- a/posts/2025/deepseek/distil-deepseek-modernbert.ipynb
+++ b/posts/2025/deepseek/distil-deepseek-modernbert.ipynb
@@ -1795,7 +1795,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Although we might have a few misses where we don't get a valid JSON object, let's proceed with this approach since the model does much better when given room to reason. \n",
+    "We can see in this example we don't have any examples where we don't get a valid JSON object (this is why we get back an empty list).\n",
+    "\n",
+    "Although we might miss a few examples where we don't get a valid JSON object when doing the full dataset, let's proceed with this approach since the model does much better when given room to reason. \n",
     "\n",
     "We'll now use the hosted version of the model to generate labels for the entire dataset. For this version, we'll use a dedicated Hugging Face inference endpoint, but if we wanted to use the full R1 model, we could use the new Inference Providers feature on the Hub. See this [blog post](https://huggingface.co/blog/inference-providers) for more information."
    ]
