add transformers version from Sayak

--- a/posts/2025/deepseek/distil-deepseek-modernbert.ipynb
+++ b/posts/2025/deepseek/distil-deepseek-modernbert.ipynb
@@ -113,6 +113,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Updates\n",
+    "\n",
+    "- 2025-01-30: [Sayak Paul](https://huggingface.co/sayakpaul) has implemented this pipeline using Transformers ([code](https://gist.github.com/sayakpaul/b5e94f5202eaf34cbaf9dac1c45f89ad)). This will be a super good option if you already have sufficient GPUs for running these models. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## How can we get the best of both worlds?\n",
     "\n",
     "tl;dr, how can we use LLMs to generate labels to fine-tune a ModernBERT model?\n",
